--- a/rmd/git.Rmd
+++ b/rmd/git.Rmd
@@ -31,7 +31,7 @@ $ git config --global user.email johndoe@example.com
 
 ## Lag SSH-nøkkel
 
-- Hvis du skal bruke git sammen med RStudio må du legge nøkkel på `c:`, slik at Rstudio kan lese den (bytt ut `ast046` med ditt brukernavn; bare trykk Enter når hun spør om passphrase). 
+- Hvis du skal bruke git sammen med RStudio må du legge nøkkel på `c:`, slik at Rstudio kan lese den (bytt ut `ast046` med ditt brukernavn; bare trykk Enter når hun spør om passphrase).
 ```bash
 $ mkdir /c/Users/ast046/.ssh
 $ mkdir /p/.ssh # til senere
@@ -85,6 +85,53 @@ $ git clone githubhn:SKDE-Analyse/test.git tmp-mappe
 $ rm -rf tmp-mappe # hvis alt gikk etter planen (fjerner mappen igjen)
 ```
 
+## Github
+
+### Sette opp Travis til å lage github pages
+
+
+Om jeg husker rett må du gjøre følgende før dette vil fungere:
+
+- Lage konto på Travis-CI.
+- Lage en Token i github, som du legger inn i Travis-CI som GITHUB_TOKEN.
+- Lag en branch som heter gh-pages.
+- Gå inn i *settings* på prosjektet og aktiver github-pages. Velg gh-pages som aktuell branch.
+
+Travis-CI vil dytte html-filer, produsert av bookdown, til branchen gh-pages med `--force`.
+
+## Rstudio, git og github på Windows gjennom proxy
+
+### Hvordan sette opp git i rstudio
+
+- Legg inn følgende i `/c/Users/$USERNAME/.ssh/config`:
+
+```
+Host githubhn
+   Hostname github.com
+   User git
+   ProxyCommand /mingw64/bin/connect.exe -H www-proxy.helsenord.no:8080 %h %p
+```
+- Legg inn følgende i `/c/Users/$USERNAME/.gitconfig` (Rstudio leser denne i steden for den på p-disken):
+
+```
+[include]
+    path = /p/.gitconfig
+```
+
+### Rstudio og github-pakker
+
+- Skriv følgende i rstudio-konsollen
+```r
+library(httr)
+set_config(use_proxy(url="http://www-proxy.helsenord.no", port=8080))
+```
+- For å installere pakker fra github
+```r
+library(devtools)
+```
+
+
+
 ## Diverse mer eller mindre obskure git-triks
 
 ### Ekskluder fil fra merge
@@ -101,6 +148,3 @@ echo 'unix.csv merge=ours' >> .gitattributes
 git add .gitattributes
 git commit -m 'Preserve unix.csv during merges'
 ```
-
-
-
