--- a/rmd/r.Rmd
+++ b/rmd/r.Rmd
@@ -35,6 +35,20 @@ library(rsconnect)
 deployApp(appName = "tabellverk")
 ```
 
+## Rstudio og github-pakker
+
+- Skriv følgende i rstudio-konsollen
+```r
+library(httr)
+set_config(use_proxy(url="http://www-proxy.helsenord.no", port=8080))
+```
+- For å installere pakker fra github
+```r
+devtools::install_github("SKDE-Analyse/dynamiskTabellverk")
+```
+
+
+
 ## Hvordan opprette en ny Rshiny applikasjon
 
 
