--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -1,18 +1,26 @@
 \usepackage{xcolor}
-\usepackage{sectsty}
 \usepackage[norsk]{babel}
 %\usepackage{fontspec} % only for luatex
 
-% Gjør alle lenker mørkeblå
-\definecolor{darkblue}{rgb}{0.0,0.0,0.3}
-\hypersetup{colorlinks,breaklinks,linkcolor=darkblue,urlcolor=darkblue,anchorcolor=darkblue,citecolor=darkblue}
+\usepackage[utf8]{inputenc}
+\usepackage{libertine} % linux libertine font
+%\usepackage[libertine]{newtxmath}
+\usepackage[T1]{fontenc}
 
+\usepackage{parskip}
 
-% Bruk hf-rager på nivå 1 og 2 overskrifter
-\definecolor{hfmork}{RGB}{0,82,155}
-\definecolor{hflys}{RGB}{104,174,224}
-\subsectionfont{\color{hflys}}
-\sectionfont{\color{hfmork}}
+\usepackage{booktabs}
+
+\definecolor{skde}{RGB}{0,80,158}
+
+%\PassOptionsToPackage{hyphens}{url}
+%\PassOptionsToPackage{colorlinks, citecolor=black, linkcolor=black, urlcolor=black}{hyperref}
+%\usepackage[colorlinks, citecolor=black, linkcolor=black, urlcolor=black]{hyperref} 
+\usepackage{sectsty}
+\allsectionsfont{\sffamily\color{skde}}
+
+\usepackage{pdfpages} % for å legge inn forside/bakside
+
 
 
 % Bruk mørk grå på all annen tekst
@@ -34,3 +42,44 @@
 \renewcommand{\bottomfraction}{0.8}
 \renewcommand{\floatpagefraction}{0.75}
 
+\title{Intern dokumentasjon for SKDE} % tittel
+%\newcommand{\subtitle}{2013-2016} % undertittel
+\newcommand{\sammendrag}{Dette notatet er en samling dokumentasjon om diverse datatekniske utfordringer og løsninger ved SKDE. Hovedsakelig skrevet av Arnfinn, men andre må også gjerne bidra.} % sammendrag
+\newcommand{\notatnummer}{\today} % dato for rapport (erstatter notatnummer)
+%\setlength{\textheight}{680pt}
+\author{%
+    Arnfinn Hykkerud Steindal \\
+    Forsker/analytiker \\
+    arnfinn.steindal@skde.no
+}
+
+\newcommand{\hoydestrek}{65pt} % kommer an på antall forfattere
+
+\usepackage{amsmath}
+\usepackage{tikz}
+\usepackage{epigraph}
+
+\renewcommand\epigraphflush{flushright}
+\renewcommand\epigraphsize{\normalsize}
+\setlength\epigraphwidth{0.7\textwidth}
+
+%\DeclareFixedFont{\titlefont}{T1}{ppl}{b}{it}{0.5in}
+\DeclareFixedFont{\titlefont}{T1}{ppl}{}{}{0.5in}
+\DeclareFixedFont{\subtitlefont}{T1}{ppl}{}{}{0.2in}
+
+\makeatletter                       
+\def\printauthor{%                  
+    {\large \@author}}
+\let\printtitle\@title
+\makeatother
+
+
+\newcommand\titlepagedecoration{%
+\begin{tikzpicture}[remember picture,overlay,shorten >= -10pt]
+\draw[opacity=0.025,white, fill=skde] (-15,20) circle (100pt);
+\draw[opacity=0.05,white, fill=skde] (2,15) circle (75pt);
+\draw[opacity=0.075,white, fill=skde] (-5,7) circle (100pt);
+\draw[opacity=0.1,white, fill=skde] (-15,3) circle (125pt);
+\draw[opacity=0.125,white, fill=skde] (3,-4) circle (150pt);
+\end{tikzpicture}%
+}
