--- a/rmd/tilrettelegging.Rmd
+++ b/rmd/tilrettelegging.Rmd
@@ -31,6 +31,6 @@ Dette kapitlet kan med fordel utvides.
 
 #### DRG
 
-- Koder hentet fra ...
+- Koder hentet [her](https://helsedirektoratet.no/finansieringsordninger/innsatsstyrt-finansiering-isf-og-drg-systemet).
 - Filene ligger på ANALYSE/Data/Kodeverk/DRG/
 - csv-filer produsert fra ISF xlsx-filer, med semikolon mellom kode og tekst
