consistent front page html and latex

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -42,9 +42,9 @@
 \renewcommand{\bottomfraction}{0.8}
 \renewcommand{\floatpagefraction}{0.75}
 
-\title{Intern dokumentasjon for SKDE} % tittel
+\title{Dokumentasjon for internt bruk ved SKDE} % tittel
 %\newcommand{\subtitle}{2013-2016} % undertittel
-\newcommand{\sammendrag}{Dette notatet er en samling dokumentasjon om diverse datatekniske utfordringer og løsninger ved SKDE. Hovedsakelig skrevet av Arnfinn, men andre må også gjerne bidra.} % sammendrag
+\newcommand{\sammendrag}{Dette er en samling dokumentasjon om diverse datatekniske utfordringer og løsninger ved SKDE. Det er hovedsakelig skrevet av Arnfinn, men andre må også gjerne bidra. Man kan bidra \href{https://github.com/SKDE-Analyse/dokumentasjon/}{her} eller på \textit{Analyse/Data/skde-analyse.github.io/dokumentasjon}} % sammendrag
 \newcommand{\notatnummer}{\today} % dato for rapport (erstatter notatnummer)
 %\setlength{\textheight}{680pt}
 \author{%
