--- a/index.Rmd
+++ b/index.Rmd
@@ -9,4 +9,4 @@ site: bookdown::bookdown_site
 ---
 
 
-# ... {-}
+Dette er en samling dokumentasjon om diverse datatekniske utfordringer og løsninger ved SKDE. Det er hovedsakelig skrevet av Arnfinn, men andre må også gjerne bidra. Man kan bidra [her](https://github.com/SKDE-Analyse/dokumentasjon/) eller på *Analyse\Data\skde-analyse.github.io\dokumentasjon*
