added info blocks in sas.md

--- a/rmd/sas.Rmd
+++ b/rmd/sas.Rmd
@@ -2,8 +2,12 @@
 
 ## Lagring av sensitive datasett
 
-- Sensitive datasett skal *kun* lagres på `npr_utva`! Disse skal slettes hvert år, når vi får nye data i hus og nye data er tilrettelagt.
+```{block2, sudo-E, type='rmdimportant'}
+Sensitive datasett skal *kun* lagres på `npr_utva`! Disse skal slettes hvert år, når vi får nye data i hus og nye data er tilrettelagt.
+```
 
+- Med sensitive data menes datasett der det er en mulighet for å identifisere pasienter (pid, kjønn, alder, bosted og/eller behandlingssted etc. ikke er slettet)
+- Merk gjerne datasettet med dine initialer, slik som dette
 ```sas
 data npr_utva.ahs_utvalg1;
 set mittutvalg;
@@ -14,8 +18,6 @@ some code
 
 run;
 ```
-
-- Med sensitive data menes datasett der det er en mulighet for å identifisere pasienter (pid, kjønn, alder, bosted og/eller behandlingssted etc. ikke er slettet)
 
 
 ## Koble til sas-server i SAS Enterprise guide
@@ -75,8 +77,9 @@ knitr::include_graphics("figurer/nySASserver_utforsker3.png")
 
 - Velg stasjon og skriv inn `\\tos-sas-skde-01\skde_analytikere\` for å få tilgang til området der dine ikke-sensitive datasett ligger.
 
-- De felles sensitive datesettene ligger på `\\tos-sas-skde-01\SKDE_Sensetiv`, men vi har ikke tilgang til denne stasjonen gjennom utforskeren.
-
+```{block2, rstudio, type='rmdinfo'}
+De felles sensitive datesettene ligger på `\\tos-sas-skde-01\SKDE_Sensetiv`, men vi har ikke tilgang til denne stasjonen gjennom utforskeren.
+```
 
 ## Laste inn vår egen autocomplete-fil
 
@@ -88,7 +91,9 @@ Dette gjøres slik at man kan enkelt få inn rateprogram etc. i sas-prosjektet
 4. Gå inn på `S:\Makroer\Abb_macro` og velg *Auto_Makro.kmf* (`S:` er her serveren `\\tos-sas-skde-01\skde_sas\`)
 5. *Close*
 
+```{block2, rstudio, type='rmdinfo'}
 Med ujevne mellomrom oppdateres *Abb_macro*, og man må da kjøre stegene 1 til 5 på nytt. Vi får prøve å gi beskjed om dette internt...
+```
 
 **(Ufullstending) oversikt over autocomplete som finnes nå**
 
