--- a/rmd/git.Rmd
+++ b/rmd/git.Rmd
@@ -2,9 +2,11 @@
 
 ## Installèr git
 
+```{block2, gitinstall, type='rmdinfo'}
 Du kan fint installere *git* på nytt og på nytt uten risiko. Den fjerner gammel *git* før den installerer ny.
+```
 
-- Last ned fra [git-scm.com](https://git-scm.com/download/win) (obs: nedlasting starter automatisk) og installer med default (ikke endre noen valg)
+- Last ned fra [git-scm.com](https://git-scm.com/download) og installer med default (ikke endre noen valg)
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; git-bash.exe legges sannsynligvis her:
 ```bash
