--- a/rmd/linux.Rmd
+++ b/rmd/linux.Rmd
@@ -14,7 +14,7 @@ Det er [mange distroer](https://upload.wikimedia.org/wikipedia/commons/1/1b/Linu
 
 ### Lubuntu
 
-Under installasjonen får man spørsmål om proxy, hvis man installerer *Alternate*-versjonen. Da skriver man inn http://www-proxy.helsenord.no:8080/. Hvis man ikke blir spurt om dette, kan man legge følgende inn i `/etc/apt/apt.conf`:
+Under installasjonen får man spørsmål om proxy, hvis man installerer *Alternate*-versjonen. Da skriver man inn `http://www-proxy.helsenord.no:8080/`. Hvis man ikke blir spurt om dette, kan man legge følgende inn i `/etc/apt/apt.conf`:
 ```
 ACQUIRE::http::Proxy "http://www-proxy.helsenord.no:8080/";
 ```
