added description on how to connect to virtuelt møterom

--- a/rmd/diverse.Rmd
+++ b/rmd/diverse.Rmd
@@ -1,5 +1,16 @@
 # Diverse annet
 
+## Koble til virtuelt møterom
+
+Are sin oppskrift
+
+- Per telefon, ring *77 60 21 00*, konferanse ID *997515*
+- Videokonferanse over helsenettet, ring *997515*
+- Skype, *997515@uc.nhn.no* ev *tos.felles.c0-513@uc.nhn.no*
+- For deltagere utenfor helsenettet, gå til siden https://join.nhn.no/ (installere klient), velg Delta i samtale (Join call), tast inn Samtale ID (Call ID) *997515* (Kode ikke nødvendig) og tast inn navnet ditt
+
+
+
 ## Koble til skriver
 
 1. Gå inn på http://tos-print-04.hn.helsenord.no/Printers/ipp_0004.asp?eprinter=TOS-UNN-C0.511A-03&view=p&page=1608 med Internett Explorer.
