--- a/rmd/linux.Rmd
+++ b/rmd/linux.Rmd
@@ -33,19 +33,7 @@ export https_proxy=https://www-proxy.helsenord.no:8080/
 - Kjør Chrome gjennom terminal `google-chrome-stable` for å få det til å fungere med proxy (ev. `Alt + F2`)
 
  
-#### R
 
-```
-sudo apt-get install r-base
-sudo apt-get install r-base-dev # sannsynligvis greit også å installere denne
-```
-
-- Last ned RStudio, og installer i terminal:
-
-```
-sudo apt-get install libjpeg62
-sudo dpkg -i Downloads/rstudio-*
-```
 
 ## Linux gjennom proxy
 
@@ -93,19 +81,36 @@ Host githubhn
         ProxyCommand /bin/nc -X connect -x www-proxy.helsenord.no:8080 %h %p
 ```
 
-## Installere RStudio
+## R/RStudio
+
+### Installere R
+
+```
+sudo apt-get install r-base
+sudo apt-get install r-base-dev # sannsynligvis greit også å installere denne
+```
+
+### Installere RStudio
+
+- Last ned RStudio, og installer i terminal:
+
+```
+sudo apt-get install libjpeg62 # RStudio er avhengig av denne pakken
+sudo dpkg -i Downloads/rstudio-*
+```
 
 ```{block2, rstudio, type='rmdinfo'}
 Linux Mint er basert på LTS-versjon av Ubuntu. Per des. 2017 er dette Ubuntu 16.04.
 ```
 
-- Følgende pakke må installeres før man kan installere RStudio:
-```
-sudo -E apt install libjpeg62 
-```
-- Last ned `rstudio-...-amd64.deb` 
-- Installer RStudio med `sudo dpkg -i Downloads/rstudio-...-amd64.deb`
+### Installere `devtools`
 
+`devtools` er avhengig av `git2r` og `httr`. Disse må ha følgende installert for å fungere
+```
+sudo apt-get install libssl-dev
+sudo apt-get install libcurl4-openssl-dev
+
+```
 
 ## Eksternt skrivebord
 
